<resources>
    <string name="app_name">Quiz</string>
    <string name="coucou">Coucou</string>
    <string name="todo">TODO</string>
    <string name="Bienvenue">Welcome</string>
    <string name="play">PLAY</string>
    <string name="settings">settings</string>
    <string name="question_number">Question 1</string>
    <string name="Titre_settings">Settings</string>
    <string name="username">Username</string>
    <string name="number">Number of questions</string>
    <string name="category">Category :</string>
    <string name="difficulty">Difficulty :</string>
    <string name="type">Type :</string>
</resources>