<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:orientation="vertical"
    tools:context=".controllers.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Titre_settings"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Enter your username"
            android:inputType="text" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Number of questions"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/numberOfQuestionsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/difficultyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/typeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_marginTop="100dp"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Submit" />


    </LinearLayout>


</LinearLayout>