<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/blue_bg"
    tools:context=".controllers.MainActivity"
    android:id="@+id/mainLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Bienvenue"
        android:textColor="@color/notreBlanc"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="Don't forget to make your settings ! "
        android:textColor="#393E41"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="50dp"
        tools:ignore="ExtraText">

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#ff393E41"
        android:backgroundTint="@color/notreGris"
        android:gravity="center"
        android:text="@string/play"
        android:textColor="@color/notreBlanc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:backgroundTint="@color/notreOrange"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/notreBlanc"
        android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>